--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -31,6 +31,8 @@
                         <md-option value="u">u</md-option>
                         <md-option value="x">x</md-option>
                     </md-select>
+                    <span title="Config Label" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
+                        Config Label:{{subarray.config_label}}</span>
                     <md-button class="md-icon-button inline-action-button" ng-click="vm.setSubarrayInMaintenance(subarray)"
                                title="Set Sub-Array in Maintenance">
                         <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
