--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -13,6 +13,8 @@
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
+                    <span title="Config Label" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
+                        Config Label:{{subarray.config_label}}</span>
 
                     <div flex style="padding: 0; margin:0; bottom:0; left: 0; position: absolute"
                          layout="row" layout-align="start center" class="unselectable list-subheader-title">
