--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -15,6 +15,8 @@
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
+                    <span title="Config Label" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
+                        Config Label:{{subarray.config_label}}</span>
                     <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
                         style="padding: 0; margin:0; bottom:0; left: 0; position: absolute">
                         <span style="max-width: 120px;min-width: 120px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('id_code')">
