--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -21,27 +21,31 @@
                     </div>
 
                     <span ng-show="subarray.state === 'active'"></span>
-                    <md-select placeholder="Product" ng-model="subarray.product">
-                        <md-option value="c856M4k">c856M4k</md-option>
-                        <md-option value="c856M32k">c856M32k</md-option>
-                    </md-select>
-                    <md-select placeholder="Band" ng-model="subarray.band">
-                        <md-option value="l">l</md-option>
-                        <md-option value="s">s</md-option>
-                        <md-option value="u">u</md-option>
-                        <md-option value="x">x</md-option>
-                    </md-select>
-                    <span title="Config Label" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
-                        Config Label:{{subarray.config_label}}</span>
+                    <!--<md-select placeholder="Product" ng-model="subarray.product">-->
+                        <!--<md-option value="c856M4k">c856M4k</md-option>-->
+                        <!--<md-option value="c856M32k">c856M32k</md-option>-->
+                    <!--</md-select>-->
+                    <!--<md-select placeholder="Band" ng-model="subarray.band">-->
+                        <!--<md-option value="l">l</md-option>-->
+                        <!--<md-option value="s">s</md-option>-->
+                        <!--<md-option value="u">u</md-option>-->
+                        <!--<md-option value="x">x</md-option>-->
+                    <!--</md-select>-->
+                    <div layout="row" style="position: absolute; padding: 0; top: 0; right: 0; font-size: 14px">
+                        <span title="Selected Band" style="margin-right: 8px;">Band: {{subarray.band}}</span>
+                        <span title="Selected Product" style="margin-right: 8px;">Product: {{subarray.product}}</span>
+                        <span ng-show="subarray.state === 'active'" title="Config Label">Config Label:{{subarray.config_label}}</span>
+                    </div>
                     <md-button class="md-icon-button inline-action-button" ng-click="vm.setSubarrayInMaintenance(subarray)"
-                               title="Set Sub-Array in Maintenance">
+                               title="Set Sub-Array in Maintenance" style="margin-top: 16px;">
                         <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
                     </md-button>
-                    <md-button class="md-icon-button inline-action-button" ng-click="vm.freeSubarray(subarray)" title="Free Subarray">
+                    <md-button class="md-icon-button inline-action-button" ng-click="vm.freeSubarray(subarray)"
+                               title="Free Subarray" style="margin-top: 16px;">
                         <md-icon class="fa" md-font-icon="fa-recycle"></md-icon>
                     </md-button>
                     <md-button ng-show="subarray.state === 'inactive'" class="md-icon-button inline-action-button" ng-click="vm.activateSubarray(subarray)"
-                               title="Activate Sub-Array">
+                               title="Activate Sub-Array" style="margin-top: 16px;">
                         <md-icon class="fa" md-font-icon="fa-power-off"></md-icon>
                     </md-button>
                 </md-toolbar>
