--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -13,8 +13,11 @@
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
-                    <span title="Config Label" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
-                        Config Label:{{subarray.config_label}}</span>
+                    <div layout="row" layout-padding="8px" style="position: absolute; top: 0px; right: 0px; font-size: 14px">
+                        <span title="Selected Band" style="margin-right: 8px;">Band: {{subarray.band}}</span>
+                        <span title="Selected Product" style="margin-right: 8px;">Product: {{subarray.product}}</span>
+                        <span ng-show="subarray.state === 'active'" title="Config Label">Config Label:{{subarray.config_label}}</span>
+                    </div>
 
                     <div flex style="padding: 0; margin:0; bottom:0; left: 0; position: absolute"
                          layout="row" layout-align="start center" class="unselectable list-subheader-title">
