--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <script src="bower_components/jsjws/jws-3.0.js"></script>
 <script src="bower_components/jsjws/ext/json-sans-eval-min.js"></script>
 <script src="bower_components/jsrsasign/jsrsasign-4.7.0-all-min.js"></script>
+<script src="bower_components/d3/d3.min.js"></script>
 <!--<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>-->
 <!-- Add New Bower Component JS Above -->
 
@@ -76,7 +77,6 @@
 <script src="app/d3/d3-gantt-chart.js"></script>
 <script src="app/d3/multi-line-chart.js"></script>
 <script src="app/d3/multi-line-two-y-axis-chart.js"></script>
-<script src="app/d3/d3-service.js"></script>
 <script src="app/d3/d3-util-service.js"></script>
 <script src="app/d3/receptor-pointing-equatorial.js"></script>
 <script src="app/d3/receptor-pointing-horizontal.js"></script>
