--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -22,16 +22,16 @@
                     <span ng-show="vm.sensorsToDisplay[key + '_running'].value" class="green-color" style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
 
                     <div layout="row" style="position: absolute; right: 0; top: 0">
-                        <md-button ng-show="!vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.processNMCommand(nm_key, key, 'start'); $event.stopPropagation()" title="Start Process">
+                        <md-button ng-show="!vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
                             <i class="fa fa-play"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.processNMCommand(nm_key, key, 'restart_process'); $event.stopPropagation()" title="Restart Process">
+                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.restartProcess(nm_key, key); $event.stopPropagation()" title="Restart Process">
                             <i class="fa fa-refresh"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.processNMCommand(nm_key, key, 'kill'); $event.stopPropagation()" title="Kill Process">
+                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.killProcess(nm_key, key); $event.stopPropagation()" title="Kill Process">
                             <i class="fa fa-remove"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.processNMCommand(nm_key, key, 'stop'); $event.stopPropagation()" title="Stop Process">
+                        <md-button ng-show="vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.stopProcess(nm_key, key); $event.stopPropagation()" title="Stop Process">
                             <i class="fa fa-stop"></i>
                         </md-button>
                     </div>
