--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -254,7 +254,7 @@
                               title="{{item.value}}">{{item.value}}</span>
                     </div>
                     <md-button title="Clear Alarm" class="inline-action-button" style="margin: 0"
-                               ng-click="vm.cancelKnowAlarm(item); $event.stopPropagation();">
+                               ng-click="vm.cancelKnownAlarm(item); $event.stopPropagation();">
                         <span style="display: inherit" class="fa fa-remove"></span>
                     </md-button>
                 </div>
