--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -46,5 +46,5 @@
         </div>
     </div>
 
-    <div ng-show="vm.childStateShowing" ui-view flex layout="column"></div>
+    <div ng-show="vm.childStateShowing" ui-view flex layout="column" style="min-height: 100%"></div>
 </div>
