--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <script src="app/services/user-service.js"></script>
 <script src="app/services/session-service.js"></script>
 <script src="app/services/status-service.js"></script>
+<script src="app/services/userlog-service.js"></script>
 
 <script src="app/util/focus-directive.js"></script>
 <script src="app/util/util.js"></script>
@@ -109,6 +110,7 @@
 <script src="app/scheduler/subarray-resources/subarray-resources.js"></script>
 <script src="app/scheduler/observations/observations-detail.js"></script>
 <script src="app/scheduler/observations/observations-overview.js"></script>
+<script src="app/userlogs/userlogs.js"></script>
 <!-- Add New Component JS Above -->
 
 <!--dont use md-whiteframe class because it leaves black artifacts on sidenav-->
@@ -201,6 +203,12 @@
                                      style="border-bottom: 1px solid #e5e5e5;">
                         <span class="fa fa-file-text-o"></span>
                         <button>Central Logger</button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('userlogs')">
+                        <span class="fa fa-pencil-square-o"></span>
+                        <button>User Logging</button>
                     </md-item-content>
                 </md-item>
                 <md-item>
