changes to align with latest katportal changes

--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -83,6 +83,9 @@
                                         <md-button ng-click="vm.viewSBTaskLog(item)" title="View Progress in a New Tab">View Progress</md-button>
                                     </md-menu-item>
                                     <md-menu-item>
+                                        <md-button ng-click="vm.cancelExecuteSchedule(item)" title="Cancel Schedule Block Execution">Cancel Execution</md-button>
+                                    </md-menu-item>
+                                    <md-menu-item>
                                         <md-button ng-click="vm.moveScheduleRowToFinished(item)" title="Move Schedule Block to Complete">Move To Completed</md-button>
                                     </md-menu-item>
                                 </md-menu-content>
