--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -9,9 +9,9 @@
 
                 <md-toolbar md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'purple'}}"
                             class="md-whiteframe-z1 md-hue-2">
-                    <span style="position: absolute; left: 8px; top: 8px;">SUB-ARRAY {{subarray.id}}</span>
+                    <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
                     <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable" ng-click="vm.navigateToSchedulerDetails(subarray.id)"
-                               title="Click to Manage Observations for Sub-Array {{subarray.id}}">
+                               title="Click to Manage Observations for Subarray {{subarray.id}}">
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
