--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -10,12 +10,12 @@
             <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.resources')">
                 <div layout="column">
                     <div style="height: 250px;" ng-include="'images/subarrays-resources.svg'"></div>
-                    <span id="subarrays-img-target-color">Manage Sub-Arrays & Resources</span></div>
+                    <span id="subarrays-img-target-color">Manage Subarrays & Resources</span></div>
             </md-button>
             <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.subarrays')">
                 <div layout="column">
                     <div style="height: 250px;" ng-include="'images/subarrays.svg'"></div>
-                    <span>Manage Sub-Array Schedule Blocks</span></div>
+                    <span>Manage Subarray Schedule Blocks</span></div>
             </md-button>
         </div>
         <div layout="row" layout-align="center center">
@@ -27,19 +27,19 @@
             </md-button>
             <div layout="column" class="scheduler-nav-home-item" style="min-width: 400px; max-width: 400px;">
                 <md-button class="md-primary md-raised" flex style="margin-bottom: 4px;" ng-click="vm.stateGoObservationSchedules(1)">
-                    <span style="margin-left: 35px;">Sub-Array 1 Observation Schedules</span>
+                    <span style="margin-left: 35px;">Subarray 1 Observation Schedules</span>
                     <div ng-include="'images/subarray.svg'" class="inline-svg-icon" style="transform: translate(-48px, -62px) scale(0.3, 0.3);"></div>
                 </md-button>
                 <md-button class="md-primary md-raised" flex style="margin-bottom: 4px;" ng-click="vm.stateGoObservationSchedules(2)">
-                    <span style="margin-left: 35px;">Sub-Array 2 Observation Schedules</span>
+                    <span style="margin-left: 35px;">Subarray 2 Observation Schedules</span>
                     <div ng-include="'images/subarray.svg'" class="inline-svg-icon" style="transform: translate(-48px, -62px) scale(0.3, 0.3);"></div>
                 </md-button>
                 <md-button class="md-primary md-raised" flex style="margin-bottom: 4px;" ng-click="vm.stateGoObservationSchedules(3)">
-                    <span style="margin-left: 35px;">Sub-Array 3 Observation Schedules</span>
+                    <span style="margin-left: 35px;">Subarray 3 Observation Schedules</span>
                     <div ng-include="'images/subarray.svg'" class="inline-svg-icon" style="transform: translate(-48px, -62px) scale(0.3, 0.3);"></div>
                 </md-button>
                 <md-button class="md-primary md-raised" flex style="margin-bottom: 4px;" ng-click="vm.stateGoObservationSchedules(4)">
-                    <span style="margin-left: 35px;">Sub-Array 4 Observation Schedules</span>
+                    <span style="margin-left: 35px;">Subarray 4 Observation Schedules</span>
                     <div ng-include="'images/subarray.svg'" class="inline-svg-icon" style="transform: translate(-48px, -62px) scale(0.3, 0.3);"></div>
                 </md-button>
             </div>
