--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -7,9 +7,9 @@
             <div layout="column" flex>
                 <md-toolbar md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'purple'}}"
                             class="md-whiteframe-z1 md-hue-2" style="max-height: 64px;min-height: 64px; position: relative">
-                    <span style="position: absolute; left: 8px; top: 8px;">SUB-ARRAY {{subarray.id}}</span>
+                    <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
                     <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable" ng-click="vm.navigateToSchedulerDetails(subarray.id)"
-                               title="Click to Manage Observations for Sub-Array {{subarray.id}}">
+                               title="Click to Manage Observations for Subarray {{subarray.id}}">
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
@@ -102,7 +102,7 @@
 
             <md-button md-theme="{{themePrimaryButtons}}" class="md-primary md-raised"
                        style="min-height: 100%; max-width: 31px; min-width: 31px; margin-left: 4px;"
-                       ng-click="vm.assignSelectedScheduleBlocks(subarray);" title="Assign Schedule Blocks to Sub-Array">
+                       ng-click="vm.assignSelectedScheduleBlocks(subarray);" title="Assign Schedule Blocks to Subarray">
                 <span class="fa fa-chevron-left md-fab-fa-icon-small"></span>
             </md-button>
         </div>
