--- a/app/video/video.html
+++ b/app/video/video.html
@@ -1,9 +1,13 @@
 <div style="position: relative;" class="view-container-full" ng-controller="VideoCtrl as vm" ng-mouseenter="vm.showVideoControls = true" ng-mouseleave="vm.showVideoControls = false">
-    <img width="100%" alt="Could not load video image..." src="http://192.168.10.68:8081/"/>
+    <img width="100%" alt="Could not load video image..." ng-src="{{vm.imageSource}}"/>
 
     <div md-theme="{{themePrimaryButtons}}" ng-show="vm.showVideoControls" class="video-pan-controls" layout="row" md-theme-watch="true">
         <div layout="row" layout-align="center end">
-            <md-slider style="background: transparent; width: 250px;" flex min="0" max="100" ng-model="vm.zoom" >
+            <md-slider style="background: transparent; width: 250px;" flex min="0" max="905" ng-model="vm.focus" ng-change="vm.focusChanged(vm.focus)"
+                       ng-model-options="{ debounce: 1000 }">
+            </md-slider>
+            <md-slider style="background: transparent; width: 250px;" min="0" max="905" ng-model="vm.zoom" ng-change="vm.zoomChanged(vm.zoom)"
+                       ng-model-options="{ debounce: 1000 }">
             </md-slider>
             <md-button ng-click="vm.rememberPos()"  class="md-fab md-button-fab-small md-primary">
                 <span class="fa fa-save md-fab-fa-icon-small"></span>
