--- a/app/video/video.html
+++ b/app/video/video.html
@@ -12,7 +12,7 @@
                            ng-model-options="{ debounce: 1000 }">
                 </md-slider>
             </div>
-            <div layout="row" layout-align="start center">
+            <div layout="row" layout-align="start center" style="margin-top: 8px;">
                 <span style="mix-blend-mode: difference; margin-right: 6px; color: white">Zoom:</span>
                 <md-slider style="background: transparent; width: 150px; margin-left: 8px;" min="0" max="905" ng-model="vm.zoom" ng-change="vm.zoomChanged(vm.zoom)"
                            ng-model-options="{ debounce: 1000 }">
