--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -1,8 +1,11 @@
-<div flex layout="row" ng-controller="ProcessControlCtrl as vm" style="margin-left: 16px; margin-right: 16px; margin-bottom: 16px; min-width: 600px">
-    <div flex ng-repeat="nm_key in objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 16px; min-width: 500px;">
+<div flex layout="row" layout-align="center start" ng-controller="ProcessControlCtrl as vm" style="margin-left: 16px; margin-right: 16px; margin-bottom: 16px;">
+    <div flex ng-repeat="nm_key in objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 16px; min-width: 320px; max-width: 320px">
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools md-toolbar-tools-medium" layout="row" layout-align="start center"
                     ng-init="vm[nm_key + 'showDetails'] = true">
-            <span flex>{{nm_key | uppercase}} Processes</span>
+            <span flex ng-init="vm[nm_key + 'showProcList'] = true"
+                  ng-click="vm[nm_key + 'showProcList'] = !vm[nm_key + 'showProcList']">
+                {{nm_key | uppercase}} Processes
+            </span>
 
             <md-button ng-click="vm.collapseAll(nm_key)" title="Collapse All" class="inline-action-button no-margin-no-padding">
                 <i class="fa fa-minus-square-o"></i>
@@ -12,7 +15,7 @@
             </md-button>
         </md-toolbar>
 
-        <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}">
+        <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}" ng-show="vm[nm_key + 'showProcList']">
             <div ng-repeat="key in objectKeys(vm.detailedProcesses[nm_key]) | orderBy:key track by key"
                  class="process-control-container">
                 <div flex ng-click="vm.detailedProcesses[nm_key][key].showDetail = !vm.detailedProcesses[nm_key][key].showDetail" role="heading"
