--- a/app/health/receptor-health/receptor-health.html
+++ b/app/health/receptor-health/receptor-health.html
@@ -4,8 +4,8 @@
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
                    ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
                     class="md-primary md-raised md-icon-button">
-            <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye" title="Show Legend"></md-icon>
-            <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash" title="Hide Legend"></md-icon>
+            <span md-theme="white" class="fa fa-eye" ng-show="!showLegend" title="Show Legend"></span>
+            <span md-theme="white" class="fa fa-eye-slash" ng-show="!showLegend" title="Hide Legend"></span>
         </md-button>
         <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
             <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
